# UTESocialNetwork

./: README.md  db.sqlite3  env.example  manage.py  pyproject.toml  render.yaml  requirements.txt  run_server.bat
UTESocialNetwork/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
admin_dashboard/: models.py  urls.py  views.py
core/: admin.py  consumers.py  forms.py  group_views.py  models.py  routing.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_followerscount_likepost_post_profile_delete_baiviet_and_more.py  0003_group_grouppost_groupcomment_groupjoinrequest_and_more.py  0004_message.py  0005_alter_post_image.py  0006_product_productimage.py  0007_group_cover_photo.py  0008_profile_cover_photo.py  0009_comment.py  0010_alter_post_options_post_is_shared_post_original_post_and_more.py  0011_groupmessage.py  0012_badge_quiz_alter_profile_user_question_quizattempt_and_more.py  0013_rename_option_a_question_option1_and_more.py
core/templatetags/: quiz_tags.py
media/post_images/: congminh.txt
quiz/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py
quiz/migrations/: 0001_initial.py  (+1 more)
staticfiles/: staticfiles.json
templates/: EnglishQuiz.html  ForgottenPage.html  GroupChatPage.html  GroupPage.html  MainPage.html  MarketPlace.html  MessagePage.html  ProductDetail.html  ProfilePage.html  QuizResults.html  SearchPage.html  SettingGroupPage.html  SettingPage.html  SignInPage.html  SignUpPage.html  TakeQuiz.html  base.html  create_group.html  daily_challenge.html  daily_challenge_style.css  post_detail.html  quiz_home.html
(+46 files in other folders)
